# libclang

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  cabal.project  cabal.project.ci  cabal.project.ci.base  clang.buildinfo.in  configure  configure.ac  libclang-bindings.cabal
.github/actions/base/: action.yml
.github/actions/build-macos/: action.yml
.github/actions/build-ubuntu/: action.yml
.github/actions/build-windows/: action.yml
.github/workflows/: cabal-fmt.yml  check-cabal-fmt.yml.disabled  check-stylish-haskell.yml  check-stylish-haskell.yml.disabled  check-whitespace.yml  haskell-ci.yml  haskell-simple-merge-queue.yml  haskell-simple-pull-request.yml.disabled  haskell.yml  stylish-haskell.yml  windows.yml
autogen/: Version_libclang_bindings.hs.in  clang_config.h.in
bootstrap/: clang-bootstrap.cabal  clang-bootstrap.hs  imports.h
cbits/: clang_wrappers.h  clang_wrappers_ffi.h
dev/: release-process.md
libclang/: libclang.cabal
libclang-bindings/: CHANGELOG.md  README.md  Setup.hs  configure  configure.ac  libclang-bindings.cabal
libclang-bindings/autogen/: clang_config.h.in  libclang_version.h.in
libclang-bindings/cbits/: clang_wrappers.h  clang_wrappers_ffi.h  doxygen_wrappers.h  rewrite_wrappers.h
libclang-bindings/src/Clang/: Args.hs  CStandard.hs  HighLevel.hs  Version.hs
libclang-bindings/src/Clang/HighLevel/: SourceLoc.hs  Types.hs
libclang-bindings/src/Clang/Internal/: Results.hs
libclang-bindings/src/Clang/LowLevel/: Core.hs  FFI.hs
libclang-bindings/src/Clang/LowLevel/Core/: Enums.hs  Pointers.hs  Structs.hsc
libclang-bindings/test/Test/: Version.hs
libclang-bindings/test/Test/Util/: FoldException.hs
libclang-bootstrap/: README.md  imports.h  libclang-bootstrap.cabal  libclang-bootstrap.hs
manual/: README.md
scripts/ci/: check-path.sh  check-stylish-ignore
src/Clang/: Args.hs  CStandard.hs  HighLevel.hs  Version.hs
src/Clang/HighLevel/: Declaration.hs  Evaluate.hs  Fold.hs  Types.hs  UserProvided.hs
src/Clang/Internal/: ByValue.hs  CXString.hs  ConstPtr.hs  Exception.hs  Ptr.hs
src/Clang/LowLevel/: Core.hs  FFI.hs
src/Clang/LowLevel/Core/: Enums.hs  Instances.hsc  Pointers.hs  Structs.hsc
src/Clang/Version/: Internal.hs
src/Clang/Version/Internal/: Check.hs
test/Test/Test/: Exceptions.hs
