cabal-version:      3.0
name:               libclang-bindings
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Well-Typed LLP
maintainer:         info@well-typed.com
category:           Development
build-type:         Configure
synopsis:           libclang bindings
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.3
   || ==9.12.2
   || ==9.14.1

extra-source-files:
  autogen/clang_config.h.in
  autogen/Version_libclang_bindings.hs.in
  bootstrap/clang-bootstrap.cabal
  bootstrap/clang-bootstrap.hs
  bootstrap/imports.h
  cbits/*.c
  cbits/*.h
  clang.buildinfo.in
  configure
  configure.ac

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/well-typed/libclang

source-repository this
  type:     git
  location: https://github.com/well-typed/libclang
  tag:      bloomfilter-blocked-0.1.0

--------------------------------------------------------------------------------
-- Configuring libclang-bindings
--
-- This package is configured using an autoconf configure script, which
-- determines how the libclang shared library is linked.
--
-- In general, llvm-config is used to determine the include and library
-- directories.  If you have more than one version LLVM/Clang installed, you may
-- configure your PATH to ensure that the llvm-config for the version that you
-- want to use is found.
--
-- If llvm-config is not available, you may instead configure the LLVM_PATH
-- environment variable to determine the include (LLVM_PATH/include) and library
-- (LLVM_PATH/lib) directories.
--
-- The clang library is linked by default.  On Linux, this library is resolved
-- to a shared library named libclang.so, and the SONAME of that shared library
-- determines the versioned filename that is actually linked.  The configured
-- library directory ensures that the correct version is linked.  Haskell
-- packages that (transitively) depend on libclang-bindings are also linked to
-- the library.  In some cases, Cabal links to the wrong version.  To work
-- around this issue, the configure script has a --with-so option.  For example,
-- a symbolic link named libclang_21_1_8.so to shared library
-- /usr/lib/llvm21/lib/libclang.so.21.1.8 provides a versioned library name
-- (libclang_21_1_8) that ensures that the correct version is linked.   Note
-- that the symbolic link must have a name with a lib prefix and .so suffix.  A
-- package that (transitively) depends on libclang-bindings can configure this
-- in a cabal.project.local file as follows:
--
--     package libclang-bindings
--       configure-options: --with-so=/absolute/path/to/libclang_21_1_8.so
--
-- Note that this symbolic link must be persistent, the path is cached in the
-- Cabal store and used whenever a package that (transitively) depends on
-- libclang-bindings is (re)built.
--
-- If you upgrade LLVM/Clang, you must reconfigure and rebuild all packages that
-- depend on it.  When using the --with-so option, you must also create a new
-- symbolic link to the new shared library.  Note that configure-options are
-- included in the Cabal store hash for the package, so changing the --with-so
-- configuration is sufficient to let Cabal know that a new build is needed.
--------------------------------------------------------------------------------

common lang
  ghc-options:
    -Wall -Widentities -Wprepositive-qualified-module
    -Wredundant-constraints -Wunused-packages

  build-depends:      base >=4.16 && <4.23
  default-language:   GHC2021

  -- We don't provide a shared list of default extension between the library
  -- and the clang-tutorial example; this way we can ensure that mere
  -- /usage/ of the library does not result in requirements for enabled
  -- language extensions.
  default-extensions:

library
  import:             lang
  hs-source-dirs:     src
  default-extensions:
    CApiFFI
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    LambdaCase
    MagicHash
    TypeFamilies
    UnboxedTuples
    UndecidableInstances
    UnliftedFFITypes
    UnliftedNewtypes

  other-extensions:   AllowAmbiguousTypes
  exposed-modules:
    Clang.Args
    Clang.Backtrace
    Clang.CStandard
    Clang.Enum.Bitfield
    Clang.Enum.Simple
    Clang.HighLevel
    Clang.HighLevel.Documentation
    Clang.HighLevel.Types
    Clang.Internal.ByValue
    Clang.LowLevel.Core
    Clang.LowLevel.Doxygen
    Clang.Paths
    Clang.Version

  other-modules:
    Clang.HighLevel.Declaration
    Clang.HighLevel.Diagnostics
    Clang.HighLevel.Evaluate
    Clang.HighLevel.Fold
    Clang.HighLevel.SourceLoc
    Clang.HighLevel.Tokens
    Clang.HighLevel.Wrappers
    Clang.Internal.ConstPtr
    Clang.Internal.CXString
    Clang.Internal.FFI
    Clang.Internal.Ptr
    Clang.Internal.Results
    Clang.LowLevel.Core.Enums
    Clang.LowLevel.Core.Instances
    Clang.LowLevel.Core.Pointers
    Clang.LowLevel.Core.Structs
    Clang.LowLevel.Doxygen.Enums
    Clang.LowLevel.Doxygen.Instances
    Clang.LowLevel.Doxygen.Structs
    Clang.LowLevel.FFI
    Clang.Version.Internal
    Clang.Version.Internal.Check
    Version_libclang_bindings

  autogen-modules:    Version_libclang_bindings

  -- External dependencies
  build-depends:
    , bytestring        >=0.11  && <0.13
    , data-default      >=0.7   && <0.9
    , exceptions        >=0.10  && <0.11
    , template-haskell  >=2.18  && <2.25
    , text              >=1.2   && <2.2
    , unliftio-core     >=0.2.1 && <0.3

  -- C bindings
  if impl(ghc <9.4)
    build-depends: data-array-byte >=0.1.0.1 && <0.2

  include-dirs:       cbits
  cc-options:         -Wall
  c-sources:          cbits/clang_wrappers.c
  build-tool-depends: hsc2hs:hsc2hs

test-suite clang-tutorial
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        clang-tutorial.hs
  hs-source-dirs: clang-tutorial

  -- Internal dependencies
  build-depends:  libclang-bindings

  -- Inherited dependencies
  build-depends:
    , data-default
    , text

test-suite test-clang-bindings
  import:             lang
  type:               exitcode-stdio-1.0
  main-is:            test-clang-bindings.hs
  hs-source-dirs:     test
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    LambdaCase

  other-modules:
    Test.Meta.IsConcrete
    Test.Test.Exceptions
    Test.Util.AST
    Test.Util.Clang
    Test.Util.FoldException
    Test.Util.Input
    Test.Util.Input.Examples
    Test.Util.Input.StructForest
    Test.Util.Shape
    Test.Version

  -- Internal dependencies
  build-depends:      libclang-bindings

  -- Inherited dependencies
  build-depends:
    , data-default
    , mtl
    , text

  -- New dependencies
  build-depends:
    , containers        >=0.6  && <0.9
    , QuickCheck        >=2.14 && <2.18
    , tasty             >=1.5  && <1.6
    , tasty-hunit       >=0.10 && <0.11
    , tasty-quickcheck  >=0.11 && <0.12
