cabal-version:      3.0
name:               libclang-bootstrap
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Well-Typed LLP
maintainer:         info@well-typed.com
category:           Development
build-type:         Simple
synopsis:           libclang bindings bootstrap
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.3
   || ==9.12.2
   || ==9.14.1

extra-source-files: imports.h
extra-doc-files:    README.md

executable libclang-bootstrap
  main-is:          libclang-bootstrap.hs
  build-depends:
    , base        >=4.16     && <4.23
    , bytestring  >=0.11.4.0 && <0.13
    , parsec      >=3.1      && <3.2

  default-language: GHC2021
  ghc-options:
    -Wall -Widentities -Wprepositive-qualified-module
    -Wredundant-constraints -Wunused-packages
